# hikkikomory-tamagotchi

./: .gitmodules  CMakeLists.txt  README.md  cp_builds.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build.yaml
components/Arduino_JSON/: CMakeLists.txt
components/Arduino_JSON/src/: JSON.cpp  JSON.h  JSONVar.h
components/Crypto/: .piopm  CMakeLists.txt
components/SparkFun_BQ27441/: CMakeLists.txt
components/SparkFun_BQ27441/src/: SparkFunBQ27441.cpp
components/WebSockets/: CMakeLists.txt  library.json
components/WebSockets/src/: WebSockets.h
main/: CMakeLists.txt  idf_component.yml  main.cpp  main.h  web_pages.h  web_server.cpp  web_server.h
main/LCD_Driver/: ST7789.c  ST7789.h
main/LCD_Driver/Vernon_ST7789T/: Vernon_ST7789T.c
main/LVGL_Driver/: LVGL_Driver.h
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
main/RGB/: RGB.c  RGB.h
main/robonomics_utils/: BlockchainUtils.cpp  BlockchainUtils.h  Call.cpp  Call.h  Defines.h  Encoder.cpp  Encoder.h  Extrinsic.cpp  Extrinsic.h  JsonUtils.cpp  JsonUtils.h  PayloadParamsUtils.cpp  PayloadParamsUtils.h  Robonomics.cpp  Robonomics.h  SubscribeStorageChange.cpp  SubscribeStorageChange.h  Utils.cpp  Utils.h  WebsocketUtils.cpp  WebsocketUtils.h  address.cpp  address.h
main/utils/: battery_utils.cpp  battery_utils.h  nvs_utils.c  nvs_utils.h
main_button_identify/: esp_zigbee_switch.c  esp_zigbee_switch.h  idf_component.yml
main_temp/: esp_zigbee_switch.c  esp_zigbee_switch.h
